Multiple changes based on work on core, process and structure