@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <repositories>
-        <repository>
-            <id>bedatadriven</id>
-            <name>bedatadriven public repo</name>
-            <url>https://nexus.bedatadriven.com/content/groups/public/</url>
-        </repository>
-    </repositories>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.nmrfx</groupId>
-    <artifactId>analystgui</artifactId>
-    <version>10.3.103</version>
-    <name>analystgui</name>
+    <artifactId>nmrfx-analyst-gui</artifactId>
+    <version>11.1.2</version>
+    <name>nmrfx-analyst-gui</name>
     <packaging>jar</packaging>
 
     <properties>
@@ -21,37 +14,101 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.renjin</groupId>
-            <artifactId>studiofx</artifactId>
-            <version>0.1</version>
-        </dependency>
-        <dependency>
             <groupId>org.nmrfx</groupId>
-            <artifactId>processor</artifactId>
-            <version>10.3.103</version>
+            <artifactId>nmrfx-processor</artifactId>
+            <version>11.1.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.nmrfx</groupId>
-            <artifactId>processorgui</artifactId>
-            <version>10.3.103</version>
+            <artifactId>nmrfx-processor-gui</artifactId>
+            <version>11.1.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.nmrfx</groupId>
-            <artifactId>analyst</artifactId>
-            <version>10.3.103</version>
+            <artifactId>nmrfx-analyst</artifactId>
+            <version>11.1.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.nmrfx</groupId>
-            <artifactId>structure</artifactId>
-            <version>10.3.103</version>
+            <artifactId>nmrfx-structure</artifactId>
+            <version>11.1.2</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>11</version>
         </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.4</version>
+                <configuration>
+                    <mainClass>org.nmrfx.processor.gui.MainApp</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.tk=centerdevice.nsmenufx</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.tk.quantum=centerdevice.nsmenufx</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.tk=centerdevice.nsmenufx</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.glass.ui=centerdevice.nsmenufx</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.glass.ui.mac=centerdevice.nsmenufx</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.menu=centerdevice.nsmenufx</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=centerdevice.nsmenufx</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
+                        <option>--add-opens</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.inputmap=org.controlsfx.controls</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.css=org.controlsfx.controls</option>
+                    </options>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -158,8 +215,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                     <compilerArguments>
                         <bootclasspath>${sun.boot.class.path}${path.separator}${java.home}/lib/jfxrt.jar</bootclasspath>
                     </compilerArguments>
